# pycandle

./: .env.vault  .gitignore  CMakeLists.txt  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
candle/: __init__.py  tensor.py
docs/source/: conf.py  index.rst
src/: tensor.py
tests/: test_tensor.py
