[project]
name = "pycandle"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin", email = "" }
]
dependencies = [
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "pylint>=3.2.2",
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "pyright>=1.1.364",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "bandit>=1.7.8",
    "radon>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pycandle"]

[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]
